faas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openfaas-ingress
  namespace: openfaas
  annotations:
    acme.cert-manager.io/http01-ingress-class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
  - host: "openfaas.hosrasmus.hopto.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port: 
              name: "http"
  tls:
  - secretName: openfaascert-tls
    hosts:
      - "openfaas.hosrasmus.hopto.org"
